--- a/inst/scripts/PennFigures.Rnw
+++ b/inst/scripts/PennFigures.Rnw
@@ -1,5 +1,6 @@
 ## which chromosomes to plot
 <<>>=
+library(Beaty)
 library(BeatyExperimentData)
 data(bsSet2)
 data(penn.ranges)
@@ -24,20 +25,45 @@ for(CHR in 1:22){
 }
 
 w <- cnv$txEnd-cnv$txStart
-cnv <- cnv[w >= 1e6, ]
+cnv <- cnv[w >= 500e3, ]
 w <- rf$txEnd-rf$txStart
-rf <- rf[w >= 1e6, ]
+rf <- rf[w >= 500e3, ]
 
 for(CHR in 1:22){
-	jpeg(paste("rectanglePlot_penn_chr", CHR, "_%02d.jpg", sep=""), width=950, height=700)
+	##jpeg(paste("rectanglePlot_penn_chr", CHR, "_%02d.jpg", sep=""), width=950, height=700)
+	pdf(paste("figures/rectanglePlot_penn_chr", CHR, "_%02d.pdf", sep=""), width=10, height=8, onefile=FALSE)
 	grid.rectangle(ranges.object=penn.ranges,
 		       CHR=CHR,
 		       xlim=xlim[[CHR]],
 		       jugessur=jugessur,
 		       rf=rf, cnv=cnv,
-		       cols="grey80")
+		       cols="grey80",
+		       alpha=0.3)
 	dev.off()
 }
+
+
+
+data(deletion.ranges)
+dr <- deletion.ranges
+state.index <- dr$state %in% c("331", "332", "432", "342", "431", "341", "441", "442", "321", "231")
+dr <- dr[state.index, ]
+r1 <- rangesInXlim(dr, 8, xlim=xlim[[8]])
+r2 <- rangesInXlim(penn.ranges, 8, xlim=xlim[[8]])
+
+for(CHR in 1:22){
+	pdf(paste("figures/rectanglePlot_del_chr", CHR, "_%02d.pdf", sep=""), width=10, height=8, onefile=FALSE)
+	trace(grid.rectangle, browser)
+	grid.rectangle(ranges.object=dr,
+		       CHR=CHR,
+		       xlim=xlim[[CHR]],
+		       jugessur=jugessur,
+		       rf=rf, cnv=cnv,
+		       cols="grey80",
+		       alpha=0.3)
+	dev.off()
+}
+
 @
 
 
